Fix issue with toolbar sliding off when screen is too narrow

--- a/src/view/components/Toolbar/Toolbar.css
+++ b/src/view/components/Toolbar/Toolbar.css
@@ -23,6 +23,12 @@
   pointer-events: none;
 }
 
+@media only screen and (max-width: 1500px) {
+  .toolbar-container {
+    width: calc(2 * var(--toolbar-width));
+  }
+}
+
 .toolbar {
   display: flex;
   flex-direction: row;
